feature: add README
